# ccrush

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  build-mingw.sh  build.bat  build.sh  codecov.yml  doxyfile  test.bat  test.sh
.circleci/: config.yml
csharp/: ccrush.cs  ccrush.csproj
csharp/lib/: NOTICE
csharp/lib/x64/linux/: libccrush.so.1.0.4  libccrush.so.2.0.0  libccrush.so.2.0.1  libccrush.so.2.0.2  libccrush.so.2.0.3
csharp/lib/x64/mac/: libccrush.1.0.4.dylib  libccrush.2.0.0.dylib  libccrush.2.0.1.dylib  libccrush.2.0.2.dylib  libccrush.2.0.3.dylib
docs/: ccrush_8h.html  ccrush_8h__incl.dot  ccrush_8h__incl.md5  ccrush_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html
docs/search/: all_0.js  all_1.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  search.js  searchdata.js
include/: ccrush.h
src/: ccrush.c  main.c
tests/: tests.c
